# freifunk-update-manager

./: Cargo.toml  Makefile  README.md  gluon-update-manager.example.toml
contrib/: gluon-update-manager.service
src/: config.rs  dump.rs  graph.rs  mac.rs  main.rs  meshinfo.rs  node_id.rs  persistence.rs  web.rs
