[package]
name = "gluon-update-manager"
version = "0.1.0"
authors = ["Kilobyte22 <stiepen22@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.18", features = ["serde"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
failure = "0.1.8"
semver = { version = "0.11.0", features = ["serde"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
slotmap = "0.4.0"
log = "0.4.11"
env_logger = "0.7.1"
toml = "0.5.6"
sd-notify = "0.1.1"
actix-web = "3.0.2"
futures = "0.3.5"
clap = "2.33.3"